log
Thu, Mar 27, 2025 10:00:31 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:38:12: error: expected expression before 'List'
     return List ;
            ^~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Thu, Mar 27, 2025 10:00:39 PM: 
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:38:12: error: expected expression before 'List'
     return List ;
            ^~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4a30dc1
Thu, Mar 27, 2025 10:24:15 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96f4214
Fri, Mar 28, 2025  7:17:44 PM: 
 list.c | 22 ++++++++++++++++------
 1 file changed, 16 insertions(+), 6 deletions(-)
 tests:  0|0
bfaf455
Fri, Mar 28, 2025  7:28:45 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ac4e73d
Fri, Mar 28, 2025  7:39:37 PM: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
52d399f
Fri, Mar 28, 2025  7:54:58 PM: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|2
total_score: 45/70
0253f34
